| Bug #12991 | Configure-Option '--without-geometry' produces Compiller-Error | ||
|---|---|---|---|
| Submitted: | 5 Sep 2005 14:02 | Modified: | 4 Oct 2006 4:47 |
| Reporter: | Peter Ulrich | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.1BK | OS: | Linux (Linux) |
| Assigned to: | Alexey Botchkov | Target Version: | |
[5 Sep 2005 15:05]
Miguel Solorzano
Thank you for the bug report. libmyisam.a(mi_check.o)(.text+0xa110): In function `chk_data_link': mi_check.c: undefined reference to `rtree_find_first' collect2: ld returned 1 exit status make[2]: *** [myisamchk] Error 1 make[2]: Leaving directory `/home/miguel/dbs/mysql-5.0/myisam' make[1]: *** [all-recursive] Error 1 make[1]: Leaving directory `/home/miguel/dbs/mysql-5.0' make: *** [all] Error 2
[9 Sep 2005 13:01]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/29559
[20 Oct 2005 8:35]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented in 5.0.16 changelog; closed.
[8 Feb 2006 18:16]
Dave Juntgen
This problem aslo exists in the 4.1.x soruce tree...please fix there as well.
[20 Aug 2006 7:36]
Felix Zaslavskiy
Please fix in 4.1 branch too!!! I am sure I wont be the last person who wasted an hour trying to figure this one out.
[20 Aug 2006 7:37]
Felix Zaslavskiy
Please fix in 4.1 branch too!!! I am sure I wont be the last person who wasted an hour trying to figure this one out.
[20 Aug 2006 17:51]
Miguel Solorzano
Thank you for the bug report. libmyisam.a(mi_check.o): In function `chk_data_link': mi_check.c:(.text+0x149c): undefined reference to `rtree_find_first' collect2: ld returned 1 exit status make[2]: *** [myisamchk] Error 1 make[2]: Leaving directory `/home/miguel/dbs/mysql-4.1/myisam' make[1]: *** [all-recursive] Error 1 make[1]: Leaving directory `/home/miguel/dbs/mysql-4.1' make: *** [all] Error 2 miguel@hegel:~/dbs/mysql-4.1>
[30 Aug 2006 17:17]
Mads Martin Joergensen
Removing 5.0 from version field, since it's fixed in 5.0
[6 Sep 2006 16:29]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/11474 ChangeSet@1.2549, 2006-09-06 19:56:19+05:00, holyfoot@mysql.com +1 -0 bug #12991 (compile error --without-geometry)
[1 Oct 2006 10:55]
Georgi Kodinov
Pushed in 4.1.22/5.0.26/5.1.12
[4 Oct 2006 4:47]
Paul DuBois
Noted in 4.1.22, 5.0.26, 5.1.12 changelogs. The source distribution failed to compile when configured with the --without-geometry option.
[16 Nov 2007 22:08]
Matthew Boehm
Please reopen this bug. Attempting to compile on brand new Dell PowerEdge 1950, single
proc, quad core 2.0Ghz Xeon 4GB RAM.
Fedora Core 8 2.6.23-1-42
MySql 5.1.22-rc
./configure --prefix=/usr \
--localstatedir=/var/lib/mysql \
--sysconfdir=/etc \
--with-charset=utf8 \
--with-unix-socket-path=/tmp/mysql.sock \
--with-mysqld-user=mysql \
--with-plugins=max \
--without-plugin-federated \
--with-plugin-myisam \
--with-plugin-innobase \
--with-plugin-ndbluster \
--without-geometry
--without-docs \
--without-man
<....stuff....>
make[3]: Entering directory `/usr/src/mysql-5.1.22-rc/sql'
if g++ -DMYSQL_SERVER -DDEFAULT_MYSQL_HOME="\"/usr\""
-DDATADIR="\"/var/lib/mysql\"" -DSHAREDIR="\"/usr/share/mysql\""
-DLIBDIR="\"/usr/lib/mysql\"" -DHAVE_CONFIG_H -I. -I. -I../include
-I../include -I../include -I../regex -I. -O3
-fno-implicit-templates -fno-exceptions -fno-rtti -MT item.o -MD -MP -MF
".deps/item.Tpo" -c -o item.o item.cc; \
then mv -f ".deps/item.Tpo" ".deps/item.Po"; else rm -f
".deps/item.Tpo"; exit 1; fi
item.cc: In member function ‘Field*
Item::tmp_table_field_from_field_type(TABLE*, bool)':
item.cc:4449: error: expected type-specifier before ‘Field_geom'
item.cc:4449: error: cannot convert ‘int*' to ‘Field*' in assignment
item.cc:4449: error: expected `;' before ‘Field_geom'
item.cc: In constructor ‘Item_type_holder::Item_type_holder(THD*,
Item*)':
item.cc:6580: error: ‘Item_geometry_func' was not declared in this scope
item.cc:6580: error: expected primary-expression before ‘)' token
item.cc:6580: error: expected primary-expression before ‘)' token
make[3]: *** [item.o] Error 1
make[3]: Leaving directory `/usr/src/mysql-5.1.22-rc/sql'
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory `/usr/src/mysql-5.1.22-rc/sql'
make[1]: *** [all] Error 2
make[1]: Leaving directory `/usr/src/mysql-5.1.22-rc/sql'
make: *** [all-recursive] Error 1
[root@dhcp05 mysql-5.1.22-rc]#

Description: Because there is actual no neet of the Geometry-Functions, i build the Binaries with the configure-Options '--without-geometry'. This 'configure'-Option produces on my Systems an Linker-Error in the Directory 'myisam' while linking 'myisamchk' against 'libmyisam.a' because the Library is build without 'HAVE_RTREE_KEYS' and therefore the referenced Funktion 'rtree_find_first' is not build. The Error-Message is: libmyisam.a (mi_check.o)(.text+0x2a92): In Function `chk_data_link': : undefined reference to `rtree_find_first' How to repeat: using ./configure --without-geometry