Fix for bug #12991 (compile error --without-geometry)